# fastapi-react-todo

./: .gitignore  README.md
backend/: pyproject.toml
backend/backend/: database.py  main.py  model.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/common/: types.ts
frontend/src/components/: Todo.tsx  TodoListView.tsx
